--- a/index.html
+++ b/index.html
@@ -3780,7 +3780,7 @@ overflow: hidden;
     </div>
   </section>
 </main>
-		<section class="section_news">
+		<!-- <section class="section_news">
 			<br><h1 class="text-center" style="font-family: Montserrat Alternates;font-weight: bold; font-size: 2.8vw;">Taiwan Recent News</h1><br>
 		<div class="news_part">
 		<div class="container-fluid">
@@ -3814,7 +3814,7 @@ overflow: hidden;
 </div>
 
 
-		</section>
+		</section> -->
 		
 		<!-- jQuery -->
 		<script src="//code.jquery.com/jquery.js"></script>
