--- a/index.html
+++ b/index.html
@@ -829,7 +829,7 @@ overflow: hidden;
 .section_transportation .cardZone .card__feature {
   font-size: 3vw;
   font-family: Montserrat Alternates;
-  font-weight: 180;
+  font-weight: 200;
   color: black;
 }
 .section_transportation .cardZone .card__feature:not(:last-child) {
@@ -2934,7 +2934,7 @@ overflow: hidden;
       <div class="card">
         <div class="card__featureBox"> 
           <div class="card__feature">Easy to plan</div>
-          <div class="card__feature">Many luggages</div>
+          <div class="card__feature">Luggages</div>
         </div>
         <div class="card__icon"><img src="https://image.flaticon.com/icons/svg/1675/1675508.svg"/></div>
       </div>
@@ -2947,7 +2947,7 @@ overflow: hidden;
         <div class="card__featureBox"> 
           <div class="card__feature">Very fast</div>
           <div class="card__feature">Comfortable</div>
-          <div class="card__feature">Many luggages </div>
+          <div class="card__feature">Luggages </div>
         </div>
         <div class="card__icon"><img src="https://image.flaticon.com/icons/svg/1168/1168006.svg"/></div>
       </div>
