--- a/index.html
+++ b/index.html
@@ -1795,22 +1795,22 @@ overflow: hidden;
   position: absolute;
 }
 .nowaday .contain .area .po {
-  content: url("https://i.imgur.com/1VW11XF.png");
+  content: url("");
 }
 .nowaday .contain .area .ec {
-  content: url("https://i.imgur.com/1VW11XF.png");
+  content: url("");
 }
 .nowaday .contain .area .so {
-  content: url("https://i.imgur.com/1VW11XF.png");
+  content: url("");
 }
 .nowaday .contain .area .se {
-  content: url("https://i.imgur.com/1VW11XF.png");
+  content: url("");
 }
 .nowaday .contain .area .me {
-  content: url("https://i.imgur.com/1VW11XF.png");
+  content: url("");
 }
 .nowaday .contain .area .ed {
-  content: url("https://i.imgur.com/1VW11XF.png");
+  content: url("");
 }
 .nowaday .contain .area .people {
   left: 25vw;
@@ -1827,7 +1827,7 @@ overflow: hidden;
   transform: translate(0%, -50%);
   width: 8vw;
   height: 8vw;
-  content: url("https://i.imgur.com/1VW11XF.png");
+  content: url("https://i.imgur.com/hIL9XLU.png");
   position: absolute;
   opacity: 0.2;
 }
@@ -1841,7 +1841,7 @@ overflow: hidden;
   transform: translate(0%, -50%);
   width: 8vw;
   height: 8vw;
-  content: url("https://i.imgur.com/1VW11XF.png");
+  content: url("https://i.imgur.com/DdkmoCn.png");
   position: absolute;
   opacity: 0.2;
 }
@@ -1906,7 +1906,7 @@ overflow: hidden;
   top: 55%;
   left: 50%;
   transform: translate(-50%, -50%);
-  content: url("https://i.imgur.com/1VW11XF.png");
+  content: url("");
 }
 .nowaday .contain .area .middle .text .element::-webkit-scrollbar {
   width: 0 !important;
