--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ overflow: hidden;
   background: linear-gradient(45deg, rgba(96, 117, 121, 0.6), rgba(200, 162, 162, 0.6)), url("https://4.bp.blogspot.com/-6Ys6oddpWW8/WzxKlYZA63I/AAAAAAAA2_4/x2QJ05lwYwEOq5sNO42CYMCPHzab9TxOACLcBGAs/s1600/_MG_8683.JPG");
 }
 .section_geography .cards .p2 {
-  background: linear-gradient(45deg, rgba(50, 60, 62, 0.7), rgba(125, 101, 101, 0.7)), url("https://cdn.101mediaimage.com/img/2017/06/11/1706191774vwh52.jpeg");
+  background: linear-gradient(45deg, rgba(50, 60, 62, 0.7), rgba(125, 101, 101, 0.7)), url("https://content.itaiwan8.com/photo_upload/202404%2F2011-1000509%2FCPL351A110509_1_jpg_s_20240425185020.jpg");
 }
 .section_geography .cards .p2:hover {
   background: linear-gradient(45deg, rgba(96, 117, 121, 0.6), rgba(200, 162, 162, 0.6)), url("https://content.itaiwan8.com/photo_upload/202404%2F2011-1000509%2FCPL351A110509_1_jpg_s_20240425185020.jpg");
